# mpg-service

./: .gitignore  docker-compose.yml  readme.md
client/: .dockerignore  .gitignore  Dockerfile  README.md  components.json  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
client/src/: App.vue  main.ts  style.css
client/src/assets/: base.css  main.css
client/src/components/: EditVehicleForm.vue  LoginForm.vue  Navigation.vue  NewVehicleForm.vue  PageBreak.vue  SignupForm.vue
client/src/lib/: common.ts  data.ts
client/src/router/: index.ts
client/src/stores/: auth.ts
client/src/views/: 404.vue  Browse.vue  Home.vue  Log.vue  Login.vue  NewVehicle.vue  NotFound.vue  SignUp.vue  UserProfile.vue
infra/: nginx.conf
server/: .gitignore  README.md  docker-compose.yml
server/env/: config.env
server/src/: .dockerignore  Dockerfile  pyproject.toml
server/src/api/: main.py
server/src/api/core/: config.py  exceptions.py  handlers.py  middleware.py  models.py  router.py  schemas.py
server/src/api/v1/: router.py
server/src/api/v1/health/: router.py  schemas.py  service.py
server/src/api/v1/metrics/: helpers.py  models.py  router.py  schemas.py  service.py
server/src/api/v1/mpg/: models.py  router.py  schemas.py  service.py
server/src/api/v1/prices/: router.py
server/src/api/v1/stations/: router.py
server/src/api/v1/users/: models.py  router.py  schemas.py  service.py
server/src/api/v1/vehicles/: models.py  router.py  schemas.py  service.py
