[project]
name = "fuel-api"
version = "0.1.0"
description = "API service to feed fuel data to the frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "requests>=2.34.2",
    "sqlalchemy[mypy]>=2.0.49",
    "toml>=0.10.2",
    "uvicorn>=0.47.0",
]
